# oarepo-glitchtip

./: .copyright.tmpl  .gitignore  README.md  initialize.py  pyproject.toml  run-tests.sh  run.sh  setup.cfg
.github/workflows/: build.yaml
oarepo_glitchtip/: ext.py  initialize.py
tests/: test_initialization.py
