[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-glitchtip"
version = "1.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Mirek Simek", email = "miroslav.simek@cesnet.cz" }
]
dependencies = [
    "flask-login>=0.6.3,<1.0.0",
    "sentry-sdk[flask]>=1.0.0,<2",
]

[project.entry-points."invenio_base.apps"]
oarepo_glitchtip = "oarepo_glitchtip.ext:OARepoGlitchtipExt"

[project.entry-points."invenio_base.api_apps"]
oarepo_glitchtip = "oarepo_glitchtip.ext:OARepoGlitchtipExt"

[project.entry-points."invenio_base.finalize_app"]
oarepo_glitchtip = "oarepo_glitchtip.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_glitchtip = "oarepo_glitchtip.ext:finalize_app"

[tool.hatch.build.targets.wheel]
packages = ["oarepo_glitchtip"]

[tool.hatch.build.targets.sdist]
include = [
    "oarepo_glitchtip/",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "celery",
    "sqlalchemy",
    "redis"
]
